@@ -23,7 +23,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/observations")
@@ -47,7 +46,7 @@ public class ObservationController {
         return findAuthenticatedUser(authHeader)
                 .map(user -> ResponseEntity.ok(observationRepository.findByUser(user).stream()
                         .map(this::toDto)
-                        .collect(Collectors.toList())))
+                        .toList()))
                 .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
@@ -156,17 +155,17 @@ public class ObservationController {
                         return ResponseEntity.status(HttpStatus.FORBIDDEN).<ObservationDto>build();
                     }
 
-                    if (details.speciesName() != null) {
-                        observation.setSpeciesName(details.speciesName());
+                    if (details.getSpeciesName() != null) {
+                        observation.setSpeciesName(details.getSpeciesName());
                     }
-                    if (details.categoryId() != null) {
-                        observation.setCategoryId(details.categoryId());
+                    if (details.getCategoryId() != null) {
+                        observation.setCategoryId(details.getCategoryId());
                     }
-                    observation.setDescription(details.description());
-                    observation.setLatitude(details.latitude());
-                    observation.setLongitude(details.longitude());
-                    observation.setCountry(details.country());
-                    observation.setCity(details.city());
+                    observation.setDescription(details.getDescription());
+                    observation.setLatitude(details.getLatitude());
+                    observation.setLongitude(details.getLongitude());
+                    observation.setCountry(details.getCountry());
+                    observation.setCity(details.getCity());
                     return ResponseEntity.ok(toDto(observationRepository.save(observation)));
                 })
                 .orElse(ResponseEntity.notFound().build());
